--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/BryanPaz9/Pacifiko_Recruitment_Test#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "mongoose": "^5.11.15",
     "nodemon": "^2.0.7"
   }
 }
